fix(styles): sticky nav shrinking height wasn't working in dark mode

--- a/src/PublicApp/styles/shell/header.scss
+++ b/src/PublicApp/styles/shell/header.scss
@@ -39,7 +39,7 @@
 	@extend %appContainerColors;
 	@extend %tertiaryAreaColors;
 	border-bottom-color: map-get($colors, primaryBG);
-	border-bottom-color: var(--chromeHeaderBG);
+	border-bottom-color: var(--navBG);
 	@include supports('dark-theme'){
 		background: var(--chromeHeaderBG);
 	}
